syntax = "proto3";
package microtick.v1beta1.msg;

import "gogoproto/gogo.proto";

option go_package = "github.com/microtick/mtzone/x/microtick/msg";

message QueryParamsRequest {}

message QueryParamsResponse {

  bool european_options = 1 [
    (gogoproto.jsontag) = "european_options"
  ];
  
  string commission_create_perunit = 2 [
    (gogoproto.jsontag) = "commission_create_perunit"
  ];  
  
  string commission_trade_fixed = 3 [
    (gogoproto.jsontag) = "commission_trade_fixed"
  ];  
  
  string commission_update_perunit = 4 [
    (gogoproto.jsontag) = "commission_update_perunit"
  ];  
  
  string commission_settle_fixed = 5 [
    (gogoproto.jsontag) = "commission_settle_fixed"
  ];  
  
  string commission_cancel_perunit = 6 [
    (gogoproto.jsontag) = "commission_cancel_perunit"
  ];  
  
  string settle_incentive = 7 [
    (gogoproto.jsontag) = "settle_incentive"
  ];  
  
  int32 freeze_time = 8 [
    (gogoproto.jsontag) = "freeze_time"
  ];
  
  string mint_denom = 9 [
    (gogoproto.jsontag) = "mint_denom"
  ];
  
  string mint_reward_create_perunit = 10 [
    (gogoproto.jsontag) = "mint_reward_create_perunit"
  ];
  
  string mint_reward_update_perunit = 11 [
    (gogoproto.jsontag) = "mint_reward_update_perunit"
  ];
  
  string mint_reward_trade_fixed = 12 [
    (gogoproto.jsontag) = "mint_reward_trade_fixed"
  ];
  
  string mint_reward_settle_fixed = 13 [
    (gogoproto.jsontag) = "mint_reward_settle_fixed"
  ];
  
  string cancel_slash_rate = 14 [
    (gogoproto.jsontag) = "cancel_slash_rate"
  ]; 
  
  string backing_denom = 15 [
    (gogoproto.jsontag) = "backing_denom"
  ];
  
  string backing_ratio = 16 [
    (gogoproto.jsontag) = "backing_ratio"
  ];
  
}

